--- a/Vue CLI/vue-cli-hello-world/package.json
+++ b/Vue CLI/vue-cli-hello-world/package.json
@@ -20,6 +20,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^8.0.0",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "~2.5.8",
