Atributos non props

--- a/Componentes/vue-components-comunicacao/package.json
+++ b/Componentes/vue-components-comunicacao/package.json
@@ -33,7 +33,9 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "vue/require-prop-type-constructor": "off"
+    }
   },
   "browserslist": [
     "> 1%",
