--- a/Componentes/vue-components-avancado/package.json
+++ b/Componentes/vue-components-avancado/package.json
@@ -34,7 +34,8 @@
       "parser": "@babel/eslint-parser"
     },
     "rules": {
-      "vue/multi-word-component-names": "off"
+      "vue/multi-word-component-names": "off",
+      "vue/no-unused-components": "off"
     }
   },
   "browserslist": [
