--- a/Componentes/vue-components-avancado/package.json
+++ b/Componentes/vue-components-avancado/package.json
@@ -35,7 +35,8 @@
     },
     "rules": {
       "vue/multi-word-component-names": "off",
-      "vue/no-unused-components": "off"
+      "vue/no-unused-components": "off",
+      "no-unused-vars": "off"
     }
   },
   "browserslist": [
