--- a/Formulários/vue-formularios/package.json
+++ b/Formulários/vue-formularios/package.json
@@ -33,7 +33,10 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "vue/multi-word-component-names": "off",
+      "vue/require-prop-type-constructor": "off"
+    }
   },
   "browserslist": [
     "> 1%",
