--- a/Animações/vue-animacoes/package.json
+++ b/Animações/vue-animacoes/package.json
@@ -34,7 +34,8 @@
       "parser": "@babel/eslint-parser"
     },
     "rules": {
-      "no-unused-vars": "off"
+      "no-unused-vars": "off",
+      "vue/multi-word-component-names": "off"
     }
   },
   "browserslist": [
